# LINE-Bot

./: .gitignore  CMakeLists.txt  Picam06_RecordVideoFacedetect_Lite.cpp  Picam07_FaceTriggerRecord.cpp  Picam13_ReadConfig.cpp  config.txt  main.cpp
picam/: Picam03_CapturePhoto.cpp  Picam04_RecordVideo.cpp  Picam05_RecordVideoFacedetect.cpp  Picam07_FaceTriggerRecord.cpp  Picam09_LineSendHello.cpp  Picam11_LineSendImage.cpp  Picam12_LineWebhook.cpp  Picam14_ReadAndNotify.cpp  Picam15_ButtonLedControl.cpp
